[tool.poetry]
name = "evolution-game"
version = "0.1.0"
description = ""
authors = ["BrandonQi <<>>"]

[tool.poetry.dependencies]
python = "3.8"
numpy = "^1.21.3"
pygame = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
